--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
@@ -4,11 +4,11 @@
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Using the "for" attribute -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" modal1Checkbox="true" number="1">
-				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['click-here-to-show-the-dialog']}" />
-				<alloy:dialog clientKey="dialogKey1" for="myButton" headerText="#{i18n['header-text']}"
+			<showcase:example modal1Checkbox="true">
+				<alloy:button onclick="Liferay.component('dialogKey1').show();" title="#{i18n['button-title']}"
+					value="#{i18n['click-here-to-show-the-dialog']}" />
+				<alloy:dialog clientKey="dialogKey1" headerText="#{i18n['header-text']}"
 					modal="#{showcaseModelBean.selectedComponent.modal1}">
 					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{dialogModelBean.text}" />
@@ -16,30 +16,7 @@
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
 						<f:ajax execute="@form" render="@form" />
 					</alloy:commandButton>
-					<alloy:button onclick="Liferay.component('dialogKey1').hide(); return false;" value="#{i18n['cancel']}" />
-				</alloy:dialog>
-			</showcase:example>
-			<showcase:outputModel>
-				<alloy:outputText value="#{dialogModelBean.text}" />
-			</showcase:outputModel>
-		</h:form>
-	</ui:define>
-
-	<ui:define name="col2">
-		<!-- Example 2: Using a clientKey and Javascript -->
-		<h:form>
-			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" modal2Checkbox="true" number="2">
-				<alloy:button onclick="Liferay.component('dialogKey2').show(); return false;" title="#{i18n['button-title']}"
-					value="#{i18n['click-here-to-show-the-dialog']}" />
-				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}"
-					modal="#{showcaseModelBean.selectedComponent.modal2}">
-					<alloy:field label="#{i18n['text-field']}">
-						<alloy:inputText value="#{dialogModelBean.text}" />
-					</alloy:field>
-					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
-						<f:ajax execute="@form" render="@form" />
-					</alloy:commandButton>
-					<alloy:button onclick="Liferay.component('dialogKey2').hide(); return false;" value="#{i18n['cancel']}" />
+					<alloy:button onclick="Liferay.component('dialogKey1').hide();" value="#{i18n['cancel']}" />
 				</alloy:dialog>
 			</showcase:example>
 			<showcase:outputModel>
