--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
@@ -1,22 +1,22 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
-	template="/templates/component-2col.xhtml">
+	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Using the "for" attribute -->
+		<!-- Default usage with hideOnBlur="false" -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" modal1Checkbox="true" number="1">
-				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['click-here-to-show-the-dialog']}" />
-				<alloy:dialog clientKey="dialogKey1" for="myButton" headerText="#{i18n['header-text']}"
-					modal="#{showcaseModelBean.selectedComponent.modal1}">
+			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" number="1">
+				<alloy:button onclick="Liferay.component('dialogKey1').toggle();" title="#{i18n['button-title']}"
+					value="#{i18n['click-here-to-toggle-the-dialog']}" />
+				<alloy:dialog clientKey="dialogKey1" headerText="#{i18n['header-text']}">
 					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
 						<f:ajax execute="@form" render="@form" />
 					</alloy:commandButton>
-					<alloy:button onclick="Liferay.component('dialogKey1').hide(); return false;" value="#{i18n['cancel']}" />
+					<alloy:button onclick="Liferay.component('dialogKey1').hide();" value="#{i18n['cancel']}" />
 				</alloy:dialog>
 			</showcase:example>
 			<showcase:outputModel>
@@ -26,20 +26,41 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Using a clientKey and Javascript -->
+		<!-- Alternate usage with hideOnBlur="true" -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" modal2Checkbox="true" number="2">
-				<alloy:button onclick="Liferay.component('dialogKey2').show(); return false;" title="#{i18n['button-title']}"
-					value="#{i18n['click-here-to-show-the-dialog']}" />
-				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}"
-					modal="#{showcaseModelBean.selectedComponent.modal2}">
+			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" number="2">
+				<alloy:button onclick="Liferay.component('dialogKey2').show();" title="#{i18n['button-title']}"
+					value="#{i18n['click-here-to-show-the-dialog-and-cilck-outside-the-dialog-to-hide']}" />
+				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}" hideOnBlur="true">
 					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
 						<f:ajax execute="@form" render="@form" />
 					</alloy:commandButton>
-					<alloy:button onclick="Liferay.component('dialogKey2').hide(); return false;" value="#{i18n['cancel']}" />
+					<alloy:button onclick="Liferay.component('dialogKey2').hide();" value="#{i18n['cancel']}" />
+				</alloy:dialog>
+			</showcase:example>
+			<showcase:outputModel>
+				<alloy:outputText value="#{dialogModelBean.text}" />
+			</showcase:outputModel>
+		</h:form>
+	</ui:define>
+
+	<ui:define name="col3">
+		<!-- Blocking usage with modal="true" -->
+		<h:form>
+			<showcase:example description="#{i18n['alloy-dialog-general-example-3']}" number="1">
+				<alloy:button onclick="Liferay.component('dialogKey3').show();" title="#{i18n['button-title']}"
+					value="#{i18n['click-here-to-show-the-modal-dialog']}" />
+				<alloy:dialog clientKey="dialogKey3" headerText="#{i18n['header-text']}" modal="true">
+					<alloy:field label="#{i18n['text-field']}">
+						<alloy:inputText value="#{dialogModelBean.text}" />
+					</alloy:field>
+					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
+						<f:ajax execute="@form" render="@form" />
+					</alloy:commandButton>
+					<alloy:button onclick="Liferay.component('dialogKey3').hide();" value="#{i18n['cancel']}" />
 				</alloy:dialog>
 			</showcase:example>
 			<showcase:outputModel>
