--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
@@ -4,7 +4,7 @@
 	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Default usage with hideOnBlur="false" -->
+		<!-- Default usage with dismissible="false" -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" number="1">
 				<alloy:button onclick="Liferay.component('dialogKey1').toggle();" title="#{i18n['button-title']}"
@@ -26,12 +26,12 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Alternate usage with hideOnBlur="true" -->
+		<!-- Alternate usage with dismissible="true" -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" number="2">
 				<alloy:button onclick="Liferay.component('dialogKey2').show();" title="#{i18n['button-title']}"
 					value="#{i18n['click-here-to-show-the-dialog-and-cilck-outside-the-dialog-to-hide']}" />
-				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}" hideOnBlur="true">
+				<alloy:dialog clientKey="dialogKey2" dismissible="true" headerText="#{i18n['header-text']}">
 					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
