--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -4,7 +4,7 @@
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Default usage with hideOnBlur="true" -->
+		<!-- Example 1: Default usage with dismissible="true" -->
 		<h:form id="myForm1">
 			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" longDescription="true" number="1">
 				<alloy:button id="myButton1" onclick="Liferay.component('popover1').toggle();"
@@ -27,12 +27,12 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Alternate usage with hideOnBlur="false" -->
+		<!-- Example 2: Alternate usage with dismissible="false" -->
 		<h:form id="myForm2">
 			<showcase:example description="#{i18n['alloy-popover-general-example-2']}" longDescription="true" number="2">
 				<alloy:button id="myButton2" onclick="Liferay.component('popover2').show();"
 					value="#{i18n['click-here-to-show-the-popover']}" />
-				<alloy:popover autoShow="false" clientKey="popover2" hideOnBlur="false" for="myButton2"
+				<alloy:popover autoShow="false" clientKey="popover2" dismissible="false" for="myButton2"
 					headerText="#{i18n['header-text']}">
 					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{popoverModelBean.text2}" />
