--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/localization/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/localization/inputDate.xhtml
@@ -16,7 +16,7 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="portugueseSelection" value="#{inputDateModelBean.birthday}">
-					<f:convertDateTime pattern="#{portugueseInputDate.datePattern}" />
+					<f:convertDateTime pattern="#{portugueseInputDate.datePattern}" locale="pt-BR" />
 				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
@@ -35,7 +35,7 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="japaneseSelection" value="#{inputDateModelBean.birthday}">
-					<f:convertDateTime pattern="#{japaneseInputDate.datePattern}" />
+					<f:convertDateTime pattern="#{japaneseInputDate.datePattern}" locale="#{inputDateModelBean.locale}" />
 				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
