--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/pickdate/localization/pickDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/pickdate/localization/pickDate.xhtml
@@ -9,7 +9,7 @@
 			<showcase:example description="#{i18n['alloy-pickdate-localization-example-1']}" number="1">
 				<alloy:pickDate for="portugueseDateInput" binding="#{portuguesePickDate}" locale="pt-BR" />
 				<alloy:inputText id="portugueseDateInput" value="#{pickDateModelBean.birthday}">
-					<f:convertDateTime pattern="#{portuguesePickDate.datePattern}" />
+					<f:convertDateTime pattern="#{portuguesePickDate.datePattern}" locale="pt-BR" />
 				</alloy:inputText>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
@@ -18,7 +18,7 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="portugueseSelection" value="#{pickDateModelBean.birthday}">
-					<f:convertDateTime pattern="#{portuguesePickDate.datePattern}" />
+					<f:convertDateTime pattern="#{portuguesePickDate.datePattern}" locale="pt-BR" />
 				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
@@ -30,7 +30,7 @@
 			<showcase:example description="#{i18n['alloy-pickdate-localization-example-2']}" number="2">
 				<alloy:pickDate for="japaneseDateInput" binding="#{japanesePickDate}" locale="#{pickDateModelBean.locale}" />
 				<alloy:inputText id="japaneseDateInput" value="#{pickDateModelBean.birthday}">
-					<f:convertDateTime pattern="#{japanesePickDate.datePattern}" />
+					<f:convertDateTime pattern="#{japanesePickDate.datePattern}" locale="#{pickDateModelBean.locale}" />
 				</alloy:inputText>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
@@ -39,7 +39,7 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="japaneseSelection" value="#{pickDateModelBean.birthday}">
-					<f:convertDateTime pattern="#{japanesePickDate.datePattern}" />
+					<f:convertDateTime pattern="#{japanesePickDate.datePattern}" locale="#{pickDateModelBean.locale}" />
 				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
