--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/commandbutton/menu/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/commandbutton/menu/commandButton.xhtml
@@ -1,37 +1,38 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:jsf="http://xmlns.jcp.org/jsf"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
-	template="/WEB-INF/templates/component-3col.xhtml">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/WEB-INF/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Creating menus via the alloy:menu tag -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-commandbutton-menu-example-1']}" number="1">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:commandButton actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-					<alloy:icon name="user" />
-					<alloy:outputText value="#{i18n['user']}" />
-					<alloy:menu>
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="pencil" />
-							<alloy:outputText value="#{i18n['edit']}" />
-						</alloy:commandLink>
-						<hr />
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="ok-sign" />
-							<alloy:outputText value="#{i18n['enable']}" />
-						</alloy:commandLink>
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="minus-sign" />
-							<alloy:outputText value="#{i18n['disable']}" />
-						</alloy:commandLink>
-						<hr />
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="trash" />
-							<alloy:outputText value="#{i18n['delete']}" />
-						</alloy:commandLink>
-					</alloy:menu>
-				</alloy:commandButton>
+				<alloy:buttonRow>
+					<alloy:commandButton actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+						<alloy:icon name="user" />
+						<alloy:outputText value="#{i18n['user']}" />
+						<alloy:menu>
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="pencil" />
+								<alloy:outputText value="#{i18n['edit']}" />
+							</alloy:commandLink>
+							<hr />
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="ok-sign" />
+								<alloy:outputText value="#{i18n['enable']}" />
+							</alloy:commandLink>
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="minus-sign" />
+								<alloy:outputText value="#{i18n['disable']}" />
+							</alloy:commandLink>
+							<hr />
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="trash" />
+								<alloy:outputText value="#{i18n['delete']}" />
+							</alloy:commandLink>
+						</alloy:menu>
+					</alloy:commandButton>
+				</alloy:buttonRow>
 			</showcase:example>
 		</alloy:form>
 	</ui:define>
@@ -41,34 +42,36 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-commandbutton-menu-example-2']}" number="2">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:commandButton actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-					<alloy:icon name="user" />
-					<alloy:outputText value="#{i18n['user']}" />
-					<alloy:menu>
-						<f:facet name="label">
-							<alloy:icon name="chevron-down" />
-							<alloy:outputText value="#{i18n['drop-down']}" />
-						</f:facet>
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="pencil" />
-							<alloy:outputText value="#{i18n['edit']}" />
-						</alloy:commandLink>
-						<hr />
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="ok-sign" />
-							<alloy:outputText value="#{i18n['enable']}" />
-						</alloy:commandLink>
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="minus-sign" />
-							<alloy:outputText value="#{i18n['disable']}" />
-						</alloy:commandLink>
-						<hr />
-						<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
-							<alloy:icon name="trash" />
-							<alloy:outputText value="#{i18n['delete']}" />
-						</alloy:commandLink>
-					</alloy:menu>
-				</alloy:commandButton>
+				<alloy:buttonRow>
+					<alloy:commandButton actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+						<alloy:icon name="user" />
+						<alloy:outputText value="#{i18n['user']}" />
+						<alloy:menu>
+							<f:facet name="label">
+								<alloy:icon name="chevron-down" />
+								<alloy:outputText value="#{i18n['drop-down']}" />
+							</f:facet>
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="pencil" />
+								<alloy:outputText value="#{i18n['edit']}" />
+							</alloy:commandLink>
+							<hr />
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="ok-sign" />
+								<alloy:outputText value="#{i18n['enable']}" />
+							</alloy:commandLink>
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="minus-sign" />
+								<alloy:outputText value="#{i18n['disable']}" />
+							</alloy:commandLink>
+							<hr />
+							<alloy:commandLink actionListener="#{commandBackingBean.feedbackListener}" render="@form">
+								<alloy:icon name="trash" />
+								<alloy:outputText value="#{i18n['delete']}" />
+							</alloy:commandLink>
+						</alloy:menu>
+					</alloy:commandButton>
+				</alloy:buttonRow>
 			</showcase:example>
 		</alloy:form>
 	</ui:define>
